tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HardcoreEnderExp-AAAAAAAAAAAAAAAAAAAAKw==__PotionofPurity-AAAAAAAAAAAAAAAAAAAJSQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2377,
  "prerequisites": [
    2376
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Potion of Purity is a drinkable or throwable potion that removes Curses.\n\nObtaining:\nThe Purity Potion is brewed in an Enhanced Brewing Stand, using Ectoplasm as the brewing ingredient and an Awkward Potion.\n\nYou can make splash potions with gunpowder and 3 more End Powder as well.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Potion of Purity",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2376
  ],
  "rewards": [],
  "tasks": []
}
