tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HardcoreEnderExp-AAAAAAAAAAAAAAAAAAAAKw==__ScorchingPickaxe-AAAAAAAAAAAAAAAAAAAJQg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2370,
  "prerequisites": [
    2360
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Scorching Pickaxe is a special type of pickaxe that smelts blocks and applies fortune effect to ores.\n\nIt only works on smeltable blocks and ores. Blocks that smelt into items are affected by fortune, including for example Iron Ore and Cactus.\n\nCompatible blocks are also mined much faster.\n\nGT Ores are not affected. You can find Vanilla Ores in the Twilight Forest inside Hollow Hills.\n\n[note]So basically, it's useless.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Scorching Pickaxe",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2360
  ],
  "rewards": [],
  "tasks": []
}
