tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HardcoreEnderExp-AAAAAAAAAAAAAAAAAAAAKw==__SilverfishBlood-AAAAAAAAAAAAAAAAAAAJRQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2373,
  "prerequisites": [
    2353
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Using a normal sword, the chance of it dropping Blood per Silverfish is 1 in 56.\nGolden swords increase the chance to 1 in 14.\n\nIt is used to brew Infestation Remedy.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Silverfish Blood",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2353
  ],
  "rewards": [],
  "tasks": []
}
