tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HardcoreEnderExp-AAAAAAAAAAAAAAAAAAAAKw==__SpatialDashGem-AAAAAAAAAAAAAAAAAAAJOw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2363,
  "prerequisites": [
    2362
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Spatial Dash Gem is used for enderpearl-like teleportation.\n\nThe Spatial Dash Gem uses Energy and can be charged in an Energy Extraction Table. Right-clicking with the gem in hand sends a purple beam straight to where the player is aiming. When the beam hits a block, the player will be teleported to it. Maximum travel distance is 75 blocks horizontally. The teleportation doesn't hurt the player, unlike Ender Pearls.\n\nThe Spatial Dash Gem always tries to place the player on the top of the block, even if the beam hits a side or a bottom of it.\n\nThe Spatial Dash Gem can teleport the player through 7 solid blocks in a row, making the gem a good way of teleporting through cave walls and ceilings. If the wall is thicker than 7 blocks, the gem then tries to find 2 air blocks inside the wall. If the air blocks are not found, the player will be teleported into a wall, leading to suffocation.\n\nA Spatial Dash Gem is dropped by an Ender Eye mini-boss upon death.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Spatial Dash Gem",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2362
  ],
  "rewards": [],
  "tasks": []
}
