tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HardcoreEnderExp-AAAAAAAAAAAAAAAAAAAAKw==__SpatialDistortio-AAAAAAAAAAAAAAAAAAACWg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 602,
  "prerequisites": [
    915
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You detected a weird disturbance in the air around an enderman. I suggest you try to steal some of their pearls and research them.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Spatial Distortions",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    915
  ],
  "rewards": [],
  "tasks": []
}
