tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HardcoreEnderExp-AAAAAAAAAAAAAAAAAAAAKw==__TNTEnchantments-AAAAAAAAAAAAAAAAAAAJTA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2380,
  "prerequisites": [
    2350
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Enhanced TNT is a special version of vanilla TNT with one or more special effects (enhancements).\n\nThe way to make enhanced TNT is to right-click with End Powder in your Hand to modify your TNT. You can continue adding as many effects to one TNT as you want.\n\nEnhancements:\nNo block damage (Feather)\nTNT explodes with no Block damage.\n\nNo Entity damage (Slime)\nTNT explodes with no Entity damage.\n\nExtra Damage (Gunpowder)\nTNT explodes with extra damage.\n\nTrap (Redstone)\nTNT explodes when hostile mob touches or walks over the TNT block.\n\nNo Clip (Enderpearls)\nTNT falls through solid blocks and explodes after a few seconds.\n\nFire (Igneous Rock)\nTNT explodes with a big fire spread.\n\nNo fuse (Redstone Torch)\nTNT explodes immediately.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "TNT Enchantments",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2350
  ],
  "rewards": [],
  "tasks": []
}
