tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HardcoreEnderExp-AAAAAAAAAAAAAAAAAAAAKw==__VisittheEnchante-AAAAAAAAAAAAAAAAAAAJNg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2358,
  "prerequisites": [
    2355
  ],
  "properties": {
    "auto_claim": false,
    "desc": "A very flat biome with small amount of caves.\n\nIt can be found with the HEE Biome Compass.\n\nThere are two variations - Homeland and Laboratory.\n\nHomeland has lakes of Ender Goo, piles of Falling Obsidian and a strange Obsidian road-like structure.\n\nYou can often find Homeland Cache, a floating transparent cube that can be broken. Endermen Baby Endermen and Ender Guardians spawn there.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Visit the Enchanted Island",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2355
  ],
  "rewards": [],
  "tasks": []
}
